[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gui/images/ui-opt-color-btn-n.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Text-8-O1.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/actor-dialog/ActorItem.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Text-10-O1.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/gui/images/ui-opt-color-btn-s.png" type="Texture" id=5]

[node name="ActorItem" type="HBoxContainer"]
margin_right = 288.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource( 3 )
color_active = ExtResource( 5 )
color_inactive = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 5.0
margin_right = 236.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 6

[node name="ActorName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_right = 236.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Actors Name"
valign = 2
clip_text = true

[node name="ActorLocation" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 20.0
margin_right = 236.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "00.00:000.000"
valign = 2
clip_text = true

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 240.0
margin_right = 288.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )

[node name="ActorColor" type="TextureRect" parent="CenterContainer"]
unique_name_in_owner = true
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_left = 13.0
margin_top = 13.0
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 22, 22 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
